[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdans"
version = "0.1.0"
description = "Temporal Causal Discovery from Autocorrelated and Non-Stationary Time Series Data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Muhammad Hasan Ferdous", email = "h.ferdous@umbc.edu" },
    { name = "Uzma Hasan" },
    { name = "Md Osman Gani" },
]
keywords = [
    "causal discovery",
    "time series",
    "nonstationary",
    "autocorrelated",
    "PCMCI",
    "CD-NOD",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "pandas>=1.5",
    "networkx>=3.0",
    "scikit-learn>=1.2",
    "tqdm>=4.65",
]

[project.optional-dependencies]
gp = ["GPy>=1.10"]
viz = ["matplotlib>=3.6", "pydot>=1.4", "tigramite>=5.2"]
dev = [
    "pytest>=7.2",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "build>=1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
    "mkdocstrings[python]>=0.23",
]
all = ["cdans[gp,viz,dev,docs]"]

[project.urls]
Homepage = "https://github.com/hferdous/CDANs"
Documentation = "https://hferdous.github.io/CDANs/"
Repository = "https://github.com/hferdous/CDANs"
Issues = "https://github.com/hferdous/CDANs/issues"
Changelog = "https://github.com/hferdous/CDANs/blob/main/CHANGELOG.md"
Paper = "https://proceedings.mlr.press/v219/ferdous23a.html"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cdans = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.9"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
